Fixed sidebar overflow

--- a/src/client/css-styles/styles-universal.css
+++ b/src/client/css-styles/styles-universal.css
@@ -62,6 +62,7 @@ html, body {
     border: 0px;
     background-color: rgb(202, 67, 67);
     align-items: center;
+    overflow-y: scroll;
 }
 
 .site-nav-bar-links {
@@ -69,7 +70,7 @@ html, body {
     /* border: 2px solid blue; */
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    top: 80px;
+    top: 20px;
     font-family: "Verdana", sans-serif;
 
 }
